--- a/app/src/main/res/layout/activity_nuevo_paquete.xml
+++ b/app/src/main/res/layout/activity_nuevo_paquete.xml
@@ -107,20 +107,35 @@
             app:layout_constraintEnd_toEndOf="parent" />
 
 
+        <!-- Botón para seleccionar foto de la galería -->
+        <ImageButton
+            android:id="@+id/btnSelectFoto"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="8dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_package_amazon"
+        android:contentDescription="Seleccionar foto"
+        app:tint="#23295c"
+        app:layout_constraintTop_toBottomOf="@id/etFotoUrlPaquete"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
         <!-- Botón Guardar -->
         <Button
             android:id="@+id/btnGuardarPaquete"
             android:layout_width="0dp"
             android:layout_height="60dp"
-            android:text="Guardar Paquete"
-            android:fontFamily="@font/inter_semibold"
-            android:textSize="18sp"
+            android:layout_marginTop="56dp"
             android:backgroundTint="#3D3DA8"
+            android:fontFamily="@font/inter_semibold"
+            android:text="Guardar Paquete"
             android:textColor="@android:color/white"
-            android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@id/etFotoUrlPaquete"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/etFotoUrlPaquete" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
